--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,11 @@
 {
     "name": "RepoWebListener",
-    "version_number": "1.0.5",
+    "version_number": "1.0.6",
     "website_url": "https://github.com/PencilFoxStudios/REPOWebListener",
     "description": "A simple but powerful web listener mod for R.E.P.O.",
     "dependencies": [
         "BepInEx-BepInExPack-5.4.2100",
-        "Zehs-REPOLib-2.1.0"
+        "Zehs-REPOLib-2.1.0",
+        "nickklmao-MenuLib-2.4.1"
     ]
 }
