--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,8 @@ name: Build and Package REPOWebListener
 on:
   push:
     branches: [ "main" ]
-
+  pull_request:
+    branches: [ "main" ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -64,11 +65,11 @@ jobs:
     - name: Create/update GitHub draft release
       uses: softprops/action-gh-release@v2
       with:
-        tag_name: v${{ steps.manifest.outputs.VERSION }}
+        tag_name: v${{ steps.manifest.outputs.VERSION }}-${{ github.ref_name}}
         name: REPOWebListener v${{ steps.manifest.outputs.VERSION }}
         body_path: CHANGELOG.md
         draft: true
-        prerelease: false
+        prerelease: true
         files: PencilFoxStudios-REPOWebListener.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
