--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   build:
-    if: contains(github.event.head_commit.message, '[build]')
+    if: contains(github.event.head_commit.message, '[build]') || github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source
